--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -1,8 +1,23 @@
 .hero{
-    text-align: center;
+display: flex;
+justify-content: center;
+text-align: center;
 padding: 80px 20px;
 background-color: #04AA6D;
 color: white;
+}
+.content{
+    max-width:700px;
+}
+.content h1{
+font-size: 42px;
+margin-bottom: 15px;
+}
+
+.content p{
+font-size: 42px;
+margin-bottom: 15px;
+line-height: 1.6;
 }
 
 .hero h1{
@@ -16,8 +31,9 @@ color: white;
 }
 
 .btn{
-    padding: 10px 20px;
-    font-size: 16px;
+    padding: 12px 30px;
+    font-size: 18px;
+    font-weight: bold;
     background-color: white;
     color: #04AA6D;
     border: none;
@@ -29,4 +45,17 @@ color: white;
 .btn:hover{
     background-color: #028a57;
     color: white;
+}
+
+@media (max-wedth:768px){
+    .content h1{
+        font-size: 32px;
+    }
+    .content p{
+        font-size: 16px;
+    }
+   .btn{
+    padding: 10px 25px;
+    font-size: 16px;
+   } 
 }
