--- a/src/pages/Css.module.css
+++ b/src/pages/Css.module.css
@@ -1,7 +1,7 @@
 .banner {
     width: 100%;
     height: 70vh;
-    background-color: green;
+    background-color: rgb(105, 218, 105);
     color: white;
     display: flex;
     justify-content: center;
