--- a/src/components/Banner.module.css
+++ b/src/components/Banner.module.css
@@ -1,6 +1,6 @@
 .banner{
     width: 100%;
-    height: 70vh;
+    height: 100%;
     background-color: green;
     color: white;
     display: flex;
