--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -20,6 +20,14 @@
     transition: 0.3s;
 }
 
+.links {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 15px;
+    margin-bottom: 20px;
+}
+
 .footer .links a:hover{
     color: white;
 }
