--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -5,6 +5,8 @@ text-align: center;
 padding: 80px 20px;
 background-color: #04AA6D;
 color: white;
+height: 100%;
+align-items: center;
 }
 .content{
     max-width:700px;
@@ -40,6 +42,7 @@ line-height: 1.6;
     border-radius: 5px;
     cursor: pointer;
     transition: 0.3s;
+    align-items: center;
 }
 
 .btn:hover{
