--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -11,6 +11,9 @@
     padding: 15px 30px;
     background-color: #282c34;
     color: white;
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
 }
 
 .logo a{
